Bug 192284 - okular is slow when scrolling dvi files
Summary: okular is slow when scrolling dvi files
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: DVI backend (other bugs)
Version First Reported In: 0.8.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-11 02:46 UTC by vigleik.angeltveit
Modified: 2009-05-11 17:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vigleik.angeltveit 2009-05-11 02:46:37 UTC
Version:           0.8.2 (using 4.2.2 (KDE 4.2.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

When viewing a dvi file and scrolling from one page to the next, okular pauses for approximately one second while loading the next page, unless that page has already been viewed.

This happens even with the 'aggressive' setting for memory usage. I see no reason why okular can't preload the whole file unless it is very big.

kdvi performed much better, though it no longer seems to be in the ubuntu repositories, so I can't make a direct comparison.
Comment 1 Pino Toscano 2009-05-11 17:14:20 UTC
SVN commit 966599 by pino:

Switch from the sync API to the async one.
Protected the potentially concurred methods using the user mutex.
Removed the manual 'ready' flag and the calculation of the bounding box, as both are done in the core.

This should avoid the block when rendering pages and extracting text from them, and reduce the "slow" feeling esp when invoking external Ghostscript.
BUG: 192284
CCBUG: 162643


 M  +22 -15    generator_dvi.cpp  
 M  +1 -4      generator_dvi.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=966599