Switch from the sync API to the async one. Protected the potentially concurred methods using the user mutex. Removed the manual 'ready' flag and the calculation of the bounding box, as both are done in the core.

This should avoid the block when rendering pages and extracting text from them, and reduce the "slow" feeling esp when invoking external Ghostscript.
BUG: 192284
CCBUG: 162643

svn path=/trunk/KDE/kdegraphics/okular/; revision=966599